# solang-circom

./: .gitignore  .prettierrc  Anchor.toml  package.json
programs/curves/: Cargo.toml
programs/curves/src/: lib.rs
programs/simpler_storage/: Cargo.toml
programs/simpler_storage/src/: lib.rs
scripts/: prepare.sh
solidity/: curves.sol  simpler_storage.sol  verifier.sol  verifier_user.sol
tests/: curves.ts  simpler_storage.ts  verifier.ts  verifierUser.ts
tests/circuits/: MultiplierTest.circom
